# verbose-guacamole

./: README.md  cookiecutter.json
.github/: pull_request_template.md
{{cookiecutter.repo_name}}/: .cookiecutter.json  .dockerignore  .gitignore  .pre-commit-config.yaml  .sqlfluff  CHANGELOG.md  Dockerfile  Jenkinsfile  MANIFEST.in  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.repo_name}}/experiments/: example_notebook.ipynb
{{cookiecutter.repo_name}}/integration_tests/: README.md
{{cookiecutter.repo_name}}/requirements/: cli_requirements.in  cli_requirements.txt  dev_requirements.in  dev_requirements.txt  requirements.in  requirements.txt
{{cookiecutter.repo_name}}/script/: build_package  check_docker_memory  create_jenkins_docker_compose_config.sh  devenv  dockerci  download_package_data.py  helpers  login_oauth.sh  nuke-docker  patch_dockerfile  pip_upgrade.sh  python-publish.sh  setup-docker  shell-docker  update_requirements.sh  verify_requirements_files.sh
{{cookiecutter.repo_name}}/secrets/: .gitkeep
{{cookiecutter.repo_name}}/tests/: README.md  conftest.py  test_hello_world.py
{{cookiecutter.repo_name}}/tests/config/: pylintrc  pytest_cov.cfg  sitecustomize.py
{{cookiecutter.repo_name}}/tests/script/: check_complexity.py  check_coverage_and_quality.sh
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py  echo.py
